<resources>
    <string name="app_name">Fly</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
</resources>