<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="@color/white"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/bg_in"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textColorHint="#000000"
            android:textSize="@dimen/_13sdp" />

        <EditText
            android:id="@+id/inPass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_in"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textColorHint="#000000"
            android:textSize="@dimen/_13sdp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatButton
                android:background="@color/primary"
                android:id="@+id/buttonSignin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                />
            <ProgressBar
                android:id="@+id/SignPro"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>




        <TextView
            android:id="@+id/tcna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/create_new_account"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13sdp"/>

    </LinearLayout>
</ScrollView>