<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"/>

        <FrameLayout
            android:id="@+id/layImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/bg_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"/>

            <TextView
                android:id="@+id/textImage"
                android:layout_width="103dp"
                android:layout_height="98dp"
                android:gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                android:textSize="@dimen/_10sdp" />



        </FrameLayout>

        <EditText
            android:id="@+id/Nameo"
            android:layout_width="356dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_in"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_30sdp"
            android:textColor="@color/primary_text"
            android:textColorHint="#000000"
            android:textSize="@dimen/_13sdp" />

        <EditText
            android:id="@+id/Emailo"
            android:layout_width="356dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_in"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_30sdp"
            android:textColor="@color/primary_text"
            android:textColorHint="#000000"
            android:textSize="@dimen/_13sdp" />

        <EditText
            android:id="@+id/Passo"
            android:layout_width="356dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_in"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_30sdp"
            android:textColor="@color/primary_text"
            android:textColorHint="#000000"
            android:textSize="@dimen/_13sdp" />

        <EditText
            android:id="@+id/conpasso"
            android:layout_width="356dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_in"
            android:hint="@string/confirm_password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_30sdp"
            android:textColor="@color/primary_text"
            android:textColorHint="#000000"
            android:textSize="@dimen/_13sdp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSignup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:background="@color/primary"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
            <ProgressBar
                android:id="@+id/proSign"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>


        <TextView
            android:id="@+id/sinin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="Signin"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>